# Visualoc-public

./: README.md
client/: Cargo.toml  index.html
client/assets/: sw.js
client/src/: main.rs
client/src/database/: async_db.rs  containers.rs  data_helpers.rs  items.rs
client/src/gui/: account.rs  canvas.rs  edit_location.rs  fields_page.rs  gui_helpers.rs  home_page.rs  locations_page.rs  login.rs  modal.rs  statistics.rs  top_row.rs
visualoc_server/: Cargo.toml
visualoc_server/src/: backup.rs  main.rs
